SDIT-1140: 🔒️ Suppress latest netty vulnerability. (#121)
* SDIT-1140: 🔒️ Suppress latest netty vulnerability.

* SDIT-1142: 🔒️ Also remove jjwt workaround